[package]
name = "cuda-rs"
version = "0.11.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Low level bindings to the CUDA Driver API"
repository = "https://github.com/Rust-GPU/Rust-CUDA"

[dependencies]
glob = "0.3.1"
libloading = "0.8.0"
thiserror = "1.0.40"
# readme = "../../README.md"
